@@ -1,4 +1,4 @@
-$Id: History,v 1.2 1999-04-16 11:35:11 kurasige Exp $
+$Id: History,v 1.3 1999-04-23 05:05:32 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+23th  April 1999 H.Kurashige
+- remove ConstructLeptHad, AddParameterisation inExN04PhysicsList
+
 16th April 1999 H.Kurashige
 - modify ExN04RunAction ExN04StackingAction ExN04SteppingAction ExN04TrackingAction
 - modify ExN04PhysicsList::SetCuts
